[package]
name = "traps"
version = "0.1.2"
authors = ["Niklas Loeser <51879435+data-niklas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowflake = "1.2"
xcb = "0.9"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
libc = "0.2"
dirs = "3.0.1"